[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MethyLYZR"
version = "1.0.0.post20260512"
description = "Naive Bayes classifier for sparse nanopore methylation profiles"
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-MPG-Research-Only"
license-files = ["LICENSE"]
authors = [
    {name = "Mara Steiger"},
]
dependencies = [
    "arrow==1.3.0",
    "matplotlib==3.8.2",
    "natsort==8.4.0",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "pyarrow==15.0.0",
    "pysam==0.22.0",
]

[project.optional-dependencies]
live = [
    "minknow_api",
    "watchdog",
]

[project.scripts]
methylzyr = "MethyLYZR:cli"

[project.urls]
Repository = "https://github.com/sagrudd/MethyLYZR"

[tool.setuptools]
py-modules = ["MethyLYZR"]
script-files = [
    "scripts/bam2feather.py",
    "scripts/live_classifier.py",
]
